User can view followers and following bloggers of his own and others. While viewing them they can also view there profile too.      !!!!!!!!!!!!!!!!!!!!!!!There is a major bug i,e in pages with data in links, logo in the tab and logo in the navbar is not showing!!!!!!!!!

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,6 +5,10 @@ body, html{
   padding: 0;
 }
 
+a {
+  text-decoration: none !important;
+}
+
 
 .signUpPageMainDiv{
   height: 100vh;
